single/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
  namespace: kafka
spec:
  clusterIP: None
  ports:
  - port: 9092
    targetPort: 9092
    name: client
  - port: 19092
    targetPort: 19092
    name: internal
  - port: 29093
    targetPort: 29093
    name: controller
  selector:
    app: kafka
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: kafka
spec:
  type: ClusterIP
  ports:
  - port: 9092
    targetPort: 9092
    name: client
  selector:
    app: kafka
