single/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  namespace: kafka
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "TCP"
    nginx.ingress.kubernetes.io/tcp-services-configmap: "kafka/tcp-services-single"
spec:
  ingressClassName: nginx
  rules:
  - host: kafka.nks.stjeong.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka
            port:
              number: 9092
